# office_mate

./: CMakeLists.txt
src/: main.cpp
